--- a/ex2/index.html
+++ b/ex2/index.html
@@ -1,86 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
+    <title>WebXR Hello World!</title>
+    <!-- Include the aframe library -->
+    <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
+  </head>
+  <body>        
+    <a-scene>
+        <!-- By default aframe scenes are only 5DofF if you want to move on the 
+        Z-axis you've got to turn on fly mode. ;) To do that you must override 
+        the default camera by adding your own camera element and marking setting
+        fly to true in the WASD controls attribute -->
 
-<head>
-	<title>Hello, WebVR! - A-Frame</title>
-	<meta name="description" content="Hello, WebVR! - A-Frame">
-	<script src="js/aframe-master-v1.3.0.min.js"></script>
+        <a-entity camera look-controls wasd-controls="fly:true" position="0 1.6 0"></a-entity>
 
-</head>
+        <a-sphere
+            position="0 1 -8"
+            radius="2"
+            color="#EF2D5E"
+            shadow>
+        </a-sphere>
+    </a-scene>
 
-<body>
-<a-scene renderer="antialias: true;">
-	  
-	<!-- Default lights: one directional light from top left, one small ambient light.
-		 Adding a light manually will remove the default lighting setup.
-		
-		Custom light setup:
-		<a-entity 
-			light="type: ambient; color: #666666;" 
-		</a-entity>
-		<a-entity 
-			light="type: directional; color: #FFFFFF; castShadow: true;" 
-			position="-1 4 0">
-		</a-entity>
-	-->
-		
-	<a-sky 
-		color = "#001337">
-	</a-sky>
-
-	<a-plane
-		width="100" height="100"
-		position=" 0.00 0.00 0.00" 
-		rotation="-90 0 0" 
-		color="#666666"
-		shadow="cast: false; receive: true">
-	</a-plane>
-
-	<a-torus-knot 
-		p="2" q="3" radius="0.5" radius-tubular="0.1"
-		position = "-2.5 1.5 -4"
-		color="#CC3333" 
-		shadow = "cast: true; receive: true">
-	</a-torus-knot>
-	
-	<a-box
-		width = "2" height = "1" depth = "1"
-		position = "-1 0.5 -3"
-		rotation = "0 45 0"  
-		color = "#FF8800"
-		shadow = "cast: true; receive: true">
-	</a-box>
-	
-	<a-sphere
-		radius = "1.25"
-		position = "0 1.25 -5"
-		color = "#DDBB00"
-		shadow = "cast: true; receive: true">
-	</a-sphere>
-	
-	<a-cylinder
-		radius = "0.5" height = "1.5"
-		position = " 1 0.75 -3"
-		color = "#008800" 
-		shadow = "cast: true; receive: true">
-	</a-cylinder>
-
-	<a-cone
-		radius-bottom = "1" radius-top = "0" height = "2"
-		position = "3 1 -4"
-		color = "#4444CC"
-		shadow = "cast: true; receive: true">
-	</a-cone>
-	
-	<a-torus 
-		radius="0.5" radius-tubular="0.1"
-		position = "2 3 -4"
-		rotation = "30 -20 0"
-		color="#8800FF"
-		shadow = "cast: true; receive: true">
-	</a-torus>
-
-</a-scene>
-
-</body>
+  </body>
 </html>
