--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <title>WebXR Hello World!</title>
     <!-- Include the aframe library -->
-    <script src="https://aframe.io/releases/0.8.2/aframe-master.min.js"></script>
+    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
   </head>
   <body>        
     <a-scene>
