--- a/Example1/index.html
+++ b/Example1/index.html
@@ -4,6 +4,7 @@
     <title>WebXR Hello World!</title>
     <!-- Include the aframe library -->
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <script src="https://supereggbert.github.io/aframe-htmlembed-component/dist/build.js"></script>
   </head>
   <body>
     <!-- Start your XR scene. This creates a <canvas> element, starts three.js
